# CyberShield-IronCore

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  AI_ENGINE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  PRD.md  PRE-PROJECT-SETTINGS.md  PROJECT_STATUS.md  README.md  TASKS.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
backend/: .coverage  .env.production  README.md  docker-compose.demo.yml  docker-compose.production.yml  production_integration_example.py  production_sso_demo.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  anomaly_detector.py  feature_extractor.py  risk_scorer.py  threat_classifier.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  api.py  billing.py  enterprise_api.py  siem.py  soar.py  supply_chain.py  threat_hunting.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  compliance.py  dashboard.py  intelligence.py  mitigation.py  monitoring.py  risk_assessment.py  threats.py  users.py
backend/app/auth/: README.md  __init__.py  dependencies.py  jwt_handler.py  oauth.py  permissions.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/database/: __init__.py  engine.py
backend/app/grpc/: __init__.py
backend/app/middleware/: enterprise_api_middleware.py
backend/app/services/: aws_mitigation_service.py  backup_disaster_recovery.py  cache_service.py  compliance_reporting.py  cross_tenant_data_prevention.py  enterprise_api_management.py  enterprise_sso.py  kafka_processor.py  mitre_attack_loader.py  multi_tenancy.py  multi_tenancy_database.py  otx_service.py  override_service.py  playbook_engine.py  rollback_service.py  servicenow_service.py  siem_integration.py  soar_integration.py  stripe_payment_service.py  subscription_manager.py  supply_chain_auditor.py  tenant_configuration_management.py  tenant_context_middleware.py  threat_feed_processor.py  threat_hunting.py  threat_intelligence.py
backend/app/services/__tests__/: mitre_attack_loader.test.py
backend/production/kubernetes/: sso-deployment.yaml
backend/production/nginx/: nginx.conf
backend/production/redis/: sentinel.conf
backend/production/sql/: init_production_tables.sql
backend/production/ssl/: generate_certs.sh
backend/production/ssl/saml/: cybershield.crt
backend/protos/: cybershield.proto
backend/tests/: test_aws_mitigation_service.py  test_backup_disaster_recovery.py  test_billing.py  test_cache_service.py  test_compliance_reporting.py  test_cross_tenant_data_prevention.py  test_enterprise_api_management.py  test_enterprise_sso.py  test_multi_tenancy.py  test_multi_tenancy_database.py  test_override_service.py  test_playbook_engine.py  test_rollback_service.py  test_servicenow_service.py  test_siem_integration.py  test_soar_integration.py  test_supply_chain_auditor.py  test_tenant_configuration_management.py  test_tenant_context_middleware.py  test_threat_hunting.py  test_threat_intelligence.py
docs/: SIEM_INTEGRATION.md
frontend/: .eslintrc.json  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  (+3 more)
(+58 files in other folders)
